# rust-employee-manager

./: .env  Cargo.toml  README.md  algo.rs  todo
migrations/2023-01-24-113813_create_employees/: up.sql
migrations/2023-02-10-064814_set_default_created_at/: down.sql  up.sql
src/: db.rs  error_handlers.rs  main.rs  schema.rs
src/employees/: mod.rs  model.rs  routes.rs
