[package]
name = "employee"
version = "0.1.0"
authors = ["Anaeze Nsoffor <nzediegwu1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.3.1"
actix-web-validator = "5.0.1"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
failure = "0.1.8"
futures = "0.3.25"
lazy_static = "1.4.0"
listenfd = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }